# Proyecto-3-Datos-II---Bases-de-datos

./: CMakeLists.txt  README.md  main.cpp  readme.txt  server.cpp
Indexes/: BST.h  BTree.h
Models/: Column.h  Row.h  table.h
QueryProcessor/: Parser.cpp  Parser.h  QueryProcessor.cpp  QueryProcessor.h
StorageManager/: StorageManager.cpp  StorageManager.h  SystemCatalog.cpp  SystemCatalog.h
